# BxiHandFirmware

./: .clang-format  CMakeLists.txt  README.md  test.py
main/: CMakeLists.txt  CRC.h  FakeSerial.cpp  FakeSerial.h  ble_hand_app.cpp  ble_hand_app.h  bxi_ble.cpp  bxi_ble.h  main.cpp
main/ftServo/include/: SCSerial.h
main/ftServo/src/: SCSerial.cpp
main/hand_driver/: HandConfig.h  Homing.cpp  Homing.h  Perferences.cpp  Perferences.h  firmware.cpp  firmware.h
